syntax = "proto3";

package messaging;

option go_package = "github.com/dills122/p2p-test/node/proto/ping";

service PingService {
    rpc PingNode (PingRequest) returns (PingReply) {}
}

message PingRequest {
    string nodeAddress = 1;
}

message PingReply {
    string nodeAddress = 1;
    string status = 2;
}
